# SEPTeX

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
.misc/: SEPTeX.uml
SEPTeX/: LaTeX.py  TeXBase.py  TeXUtils.py  TikZ.py  TikZBase.py  TikZGraph.py  __init__.py
SEPTeX/_test/: demo.py  test_LaTeX.py  test_TeXBase.py  test_TikZBase.py
SEPTeX/_test/tmp/: demo1.tex  demo2.tex
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/modules/: LaTeX.doctree  SEPTeX.doctree  SEPTikZ.doctree  TeXBase.doctree  TeXUtils.doctree  TikZ.doctree  TikZBase.doctree  index.doctree
docs/_sources/modules/: LaTeX.rst.txt  SEPTeX.rst.txt  TeXUtils.rst.txt  TikZ.rst.txt  TikZBase.rst.txt
docs/modules/: LaTeX.html  SEPTeX.html  SEPTikZ.html  TeXBase.html  TeXUtils.html  TikZ.html  TikZBase.html  index.html
sphinx/: Makefile
sphinx/source/: conf.py  index.rst
sphinx/source/_static/: custom.css
sphinx/source/modules/: LaTeX.rst  SEPTikZ.rst  TeXBase.rst  TeXUtils.rst  TikZ.rst  TikZBase.rst  index.rst
