[metadata]
name = SEPTeX
version = 0.2.0
author = Marcel Simader
author_email = marcel0simader@gmail.com
description = SEPTeX is a wrapper library for generating TeX/TikZ code through Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcelSimader/SEPTeX/
project_urls =
	Documentation = https://marcelsimader.github.io/SEPTeX/
	Source = https://github.com/MarcelSimader/SEPTeX/
classifiers =
	Programming Language :: Python :: 3.9
	Development Status :: 3 - Alpha
	License :: Free for non-commercial use
	Operating System :: Unix
	Environment :: Console

[options]
package_dir = 
	= .
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = .
